<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.typing.app.ui.home.HomeFragment"
        android:label="@string/home_title" />

    <fragment
        android:id="@+id/practice_fragment"
        android:name="com.typing.app.ui.practice.PracticeFragment"
        android:label="@string/practice_title" />

    <fragment
        android:id="@+id/content_list_fragment"
        android:name="com.typing.app.ui.content.ContentListFragment"
        android:label="@string/content_list_title" />

    <fragment
        android:id="@+id/content_edit_fragment"
        android:name="com.typing.app.ui.content.ContentEditFragment"
        android:label="@string/edit_title" />

    <fragment
        android:id="@+id/content_detail_fragment"
        android:name="com.typing.app.ui.content.ContentDetailFragment"
        android:label="@string/detail_title" />

    <fragment
        android:id="@+id/nav_records"
        android:name="com.typing.app.ui.records.RecordsFragment"
        android:label="@string/records_title" />

    <fragment
        android:id="@+id/nav_challenge"
        android:name="com.typing.app.ui.challenge.ChallengeFragment"
        android:label="@string/challenge_title" />

</navigation>
